# cesrox

./: .gitignore  Cargo.toml  README.md  state.md
src/: ffi.rs  lib.rs
src/derivation/: attached_signature_code.rs  basic.rs  self_addressing.rs  self_signing.rs
src/error/: mod.rs  serializer_error.rs
src/event/sections/: seal.rs
src/event_parsing/: attachment.rs  mod.rs  payload_size.rs  prefix.rs
src/groups/: counter.rs  frame.rs  indexed_controller_signatures.rs  indexed_witness_signatures.rs  last_est_signatures_groups.rs  mod.rs  receipt_couples.rs  seal_signatures_groups.rs  seal_source_couples.rs
src/keys/: mod.rs
src/message/: custom.rs  group.rs  message.rs  message_list.rs  message_type.rs  mod.rs  parsers.rs
src/message/groups/: attached_material_quadlets.rs  controller_idx_sigs.rs  first_seen_replay_couples.rs  mod.rs  (+9 more)
src/prefix/: attached_signature.rs  basic.rs  mod.rs  seed.rs  self_addressing.rs  self_signing.rs
src/primitives/: codes.rs  key.rs  mod.rs
src/utils/: nom.rs
tests/: demo.rs
uniffi/: Cargo.toml  README.md  build.rs  uniffi.toml
uniffi/src/: cesrox.udl  lib.rs
uniffi/src/groups/: frame.rs  indexed_controller_signatures.rs  indexed_witness_signatures.rs  last_est_signatures_groups.rs  mod.rs  receipt_couples.rs  seal_signatures_groups.rs  seal_source_couples.rs
uniffi/src/message/: custom.rs  group.rs  matter.rs  message.rs  message_list.rs  mod.rs
uniffi/src/message/groups/: attached_material_quadlets.rs  controller_idx_sigs.rs  first_seen_replay_couples.rs  mod.rs  non_trans_receipt_couples.rs  pathed_material_quadlets.rs  sad_path_sig.rs  sad_path_sig_group.rs  seal_source_couples.rs  trans_idx_sig_groups.rs  trans_last_idx_sig_groups.rs  trans_receipt_quadruples.rs  witness_ids_sigs.rs
uniffi/src/message/primitives/: cigar.rs  codex.rs  dater.rs  diger.rs  mod.rs  prefixer.rs  saider.rs  seqner.rs  siger.rs  signer.rs  verfer.rs
uniffi/src/primitives/: attached_signature.rs  basic.rs  mod.rs  self_addressing.rs  self_signing.rs
uniffi/src/uniffi/cesrox/: cesrox.kt
wrappers/kotlin/: settings.gradle.kts
(+41 files in other folders)
