[package]
name = "cesrox"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
cesride = { git = "https://github.com/DSRCorporation/cesride.git", branch = "changes-for-parside" }
parside = { git = "https://github.com/DSRCorporation/parside.git", branch = "initial-implementation" }
